--- a/apps/todo/todo.css
+++ b/apps/todo/todo.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     margin: 0;
     background-image: linear-gradient(to top right, rgb(39, 52, 42), rgb(47, 38, 49));
+    background-size: cover;
     backdrop-filter: blur(50px);
     color: white;
     overflow: hidden;
@@ -11,17 +12,19 @@ body {
 
 #topbar {
     display: flex;
-    width: 97.9%;
-    height: 60px;
+    min-width: 100%;
+    max-width: 100%;
+    height: 80px;
     border: 2px rgba(28, 28, 28, 0.84) solid;
-    padding: 10px 15px;
     align-items: center;
-    justify-content: space-between;
+    justify-content:space-between;
+    user-select: none;
 }
 
 #title {
     font-weight: bolder;
     font-size: 22px;
+    padding-left: 16px;
 }
 
 #last-update {
@@ -31,16 +34,19 @@ body {
 
 #menu {
     font-size: 25px;
+    padding-right: 16px;
 }
 
 #container {
     display: flex;
     backdrop-filter: blur(20px);
+    width: 100%;
 }
 
 #left-panel {
     display: flex;
     flex-direction: column;
+    user-select: none;
     gap: 15px;
     border: 2px rgba(28, 28, 28, 0.84) solid;
     border-radius: 0px 20px 0px 0px;
@@ -66,12 +72,21 @@ body {
     background-color: rgba(240, 248, 255, 0.32);
 }
 
+.left-panel-items:active {
+    background-color: rgba(88, 88, 88, 0.32);
+}
+
+.left-panel-items ion-icon {
+    padding-right: 10px;
+}
+
 #right-panel {
     display: inline-block;
     border-radius: 20px 0px 0px 0px;
-    width: 90%;
+    max-width: 90%;
     border: 2px rgba(28, 28, 28, 0.84) solid;
     padding: 50px;
+    flex: 1; 
 }
 
 .todo-item {
@@ -126,10 +141,19 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
-    #topbar {
-        width: 91.5%;
+
+    .left-panel-items ion-icon {
+        padding-right: 10px;
+        font-size: 23px;
     }
-    .left-panel-items #today {
-        content: "<ion-icon name='today-outline'></ion-icon>";
+
+}
+
+@media only screen and (max-width: 650px) {
+
+    .left-panel-items ion-icon {
+        padding-right: 0;
+        font-size: 23px;
     }
+
 }
