--- a/modules/signinup/signinup.css
+++ b/modules/signinup/signinup.css
@@ -9,6 +9,8 @@
     background-color: #75757578;
     border-radius: 30px;
     backdrop-filter: blur(18px);
+    color: white;
+    text-shadow: 0px 0px 20px #050505;
 }
 
 .loginForm form {
@@ -53,7 +55,12 @@
     background-color: #ffffff00;
     border-width: 1px;
     border-style: solid;
+    border-color: aliceblue;
     box-shadow: 0 0 0 0;
     padding: 15px;
     font-weight: bold;
+    color: white;
+    text-shadow: 0px 0px 20px #050505;
+    box-shadow: 0px 0px 10px #05050550;
+    border-radius: 15px;
 }
