--- a/modules/signinup/signinup.css
+++ b/modules/signinup/signinup.css
@@ -6,9 +6,9 @@
     flex-wrap: wrap;
     width: 100%;
     height: 100%;
-    background-color: #75757578;
-    border-radius: 30px;
-    backdrop-filter: blur(18px);
+    /* background-color: #75757578; */
+    border-radius: 10px;
+    /* backdrop-filter: blur(18px); */
     color: white;
     text-shadow: 0px 0px 20px #050505;
 }
