--- a/apps/todo/todo.css
+++ b/apps/todo/todo.css
@@ -152,6 +152,53 @@ body {
     transform: rotate(45deg);
 }
 
+#add-popup {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 1000;
+    left: 33%;
+    top: 33%;
+    border-radius: 10px;
+    width: 500px;
+    height: 300px;
+    background-color: rgba(0, 128, 128, 0.516);
+}
+
+#add-popup form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 80%;
+}
+
+input {
+    border-width: 0;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+#add-popup form button {
+    border-width: 0;
+    background-color: aliceblue;
+    font-weight: bold;
+    padding: 10px;
+    width: 50px;
+    border-radius: 10px;
+}
+
+#add-popup form label {
+    margin-bottom: -8px;
+    color: rgb(206, 206, 206);
+}
+
+#todo-desc-input {
+    height: 70px;
+    padding: 0 10px;
+    text-align: start;
+}
+
 @media only screen and (max-width: 768px) {
 
     .left-panel-items ion-icon {
