--- a/apps/todo/todo.css
+++ b/apps/todo/todo.css
@@ -101,6 +101,21 @@ body {
     flex: 1; 
 }
 
+#items-title {
+    display: flex;
+    justify-content: space-between;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+
+#items-title span {
+    width: 50%;
+}
+
+#items-sec {
+    font-weight: lighter;
+}
+
 .todo-item {
     display: flex;
     padding: 15px 0px;
@@ -113,7 +128,7 @@ body {
     display: block;
     position: relative;
     padding-left: 30px;
-    width: 100%;
+    width: 47.7%;
     cursor: pointer;
 }
 
@@ -162,7 +177,7 @@ body {
     top: 33%;
     border-radius: 10px;
     width: 500px;
-    height: 300px;
+    height: 350px;
     background-color: rgba(0, 128, 128, 0.516);
 }
 
@@ -197,6 +212,12 @@ input {
     height: 70px;
     padding: 0 10px;
     text-align: start;
+}
+
+form ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 @media only screen and (max-width: 768px) {
