--- a/apps/todo/todo.css
+++ b/apps/todo/todo.css
@@ -27,8 +27,7 @@ body {
     padding-left: 16px;
 }
 
-#last-update {
-    font-size: 12px;
+#user-sec {
     color: rgb(197, 197, 197);
 }
 
@@ -37,14 +36,14 @@ body {
     padding-right: 16px;
 }
 
-#menu {
+#login-register-popup {
     display: none;
     position:fixed;
     z-index: 1000;
-    background-color: #ffffff9d;
-    width: 300px;
-    height: 300px;
-    left: 79.2%;
+    background-color: #184539f7;
+    width: 400px;
+    height: 400px;
+    left: 40%;
     top: 8%;
     border-radius: 10px;
 }
