Added functions to show user's name on topbar and user-sec popup when they login or register and fixed some bugs

--- a/apps/todo/todo.css
+++ b/apps/todo/todo.css
@@ -39,6 +39,9 @@ body {
 #login-register-popup {
     display: none;
     position:fixed;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     z-index: 1000;
     background-color: #184539f7;
     width: 400px;
