--- a/apps/todo/todo.css
+++ b/apps/todo/todo.css
@@ -175,12 +175,13 @@ body {
     align-items: center;
     position: fixed;
     z-index: 1000;
-    left: 33%;
-    top: 33%;
+    left: 35%;
+    top: 26%;
     border-radius: 10px;
     width: 500px;
     height: 350px;
-    background-color: rgba(0, 128, 128, 0.516);
+    background-color: rgba(32, 36, 36, 0.943);
+    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.384);
 }
 
 #add-popup form {
@@ -227,6 +228,17 @@ form ul {
     .left-panel-items ion-icon {
         padding-right: 10px;
         font-size: 23px;
+    }
+
+    #items-title {
+        display: flex;
+        justify-content: space-between;
+        font-size: 20px;
+        margin-bottom: 15px;
+    }
+
+    #items-title span {
+        width: 50%;
     }
 
 }
