--- a/apps/todo/todo.css
+++ b/apps/todo/todo.css
@@ -175,10 +175,10 @@ body {
     align-items: center;
     position: fixed;
     z-index: 1000;
-    left: 35%;
+    left: 28%;
     top: 26%;
     border-radius: 10px;
-    width: 500px;
+    max-width: 700px;
     height: 350px;
     background-color: rgba(32, 36, 36, 0.943);
     box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.384);
