--- a/apps/todo/todo.css
+++ b/apps/todo/todo.css
@@ -44,9 +44,8 @@ body {
     flex-direction: column;
     z-index: 1000;
     background-color: #184539f7;
-    width: 400px;
+    max-width: 400px;
     height: 400px;
-    left: 40%;
     top: 8%;
     border-radius: 10px;
 }
@@ -221,6 +220,15 @@ form ul {
     list-style: none;
     margin: 0;
     padding: 0;
+}
+
+#logout-btn {
+    padding-top: 20px;
+    background-color: #18453900;
+    border-width: 4px;
+    padding: 10px;
+    border-radius: 10px;
+    border-color: black;
 }
 
 @media only screen and (max-width: 768px) {
