--- a/apps/todo/todo.css
+++ b/apps/todo/todo.css
@@ -43,11 +43,12 @@ body {
     justify-content: center;
     flex-direction: column;
     z-index: 1000;
-    background-color: #184539f7;
+    background-color: #183045f7;
     max-width: 400px;
     height: 400px;
     top: 8%;
     border-radius: 10px;
+    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.384);
 }
 
 #container {
@@ -223,12 +224,13 @@ form ul {
 }
 
 #logout-btn {
-    padding-top: 20px;
+    margin-top: 20px;
     background-color: #18453900;
     border-width: 4px;
     padding: 10px;
     border-radius: 10px;
-    border-color: black;
+    color: white;
+    font-weight: bold;
 }
 
 @media only screen and (max-width: 768px) {
